attempt to fix overlap 2 by editing css

--- a/scribble-pad_style.css
+++ b/scribble-pad_style.css
@@ -41,8 +41,9 @@ p {
   color: black;
 }
 .content {
-  margin-left: 200px;
+  margin-left: 250px;
   padding-left: 20px;
+  padding-right: 200px;
 }
 ul {
   margin-left: 20px;
